--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -12,7 +12,9 @@
   </div>
 
   <div class="relative z-10 flex flex-col items-center justify-center h-full text-center px-6">
-    <h1 style="font-family:'Cinzel', serif;" class="text-6xl font-thin text-white mb-4 opacity-100">
+    <h1 id="about-hero-title" 
+        style="font-family:'Cinzel', serif;" 
+        class="text-6xl font-thin text-white mb-4 opacity-0 translate-y-6 transition-all duration-1000">
       ABOUT US
     </h1>
   </div>
