--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,4 @@
+/* 
 body {
   font-family: Inter, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Arial, sans-serif;
   color: rgb(6, 32, 104) !important;
@@ -23,4 +24,4 @@ body {
 
 .testcolor{
  color: rgb(67, 85, 145);
-}
+} */
