--- a/templates/adminbase.html.twig
+++ b/templates/adminbase.html.twig
@@ -44,7 +44,7 @@
 
   <main class="relative min-h-screen">
     
-    <div class="absolute inset-0 bg-[url('/images/pattern.png')] bg-repeat bg-center opacity-30 pointer-events-none"></div>
+    {# <div class="absolute inset-0 bg-[url('/images/pattern.png')] bg-repeat bg-center opacity-30 pointer-events-none"></div> #}
 
     <div class="relative z-10">
         {% block body %}{% endblock %}
