--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
     {% endblock %}
 
   {#<script src="https://cdn.tailwindcss.com"></script>#}
-  <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+  {# <link rel="stylesheet" href="{{ asset('css/styles.css') }}"> #}
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@100;400;700&display=swap" rel="stylesheet">
 <link rel="icon" type="image/png" href="{{ asset('images/logo.svg') }}">
 </head>
@@ -77,7 +77,7 @@
   </footer>
 
   {% block javascripts %}
-    <script src="{{ asset('script/homepage.js') }}"></script>
+    <script src="{{ asset('script/script.js') }}"></script>
   {% endblock %}
 </body>
 </html>
