--- a/templates/booking/index.html.twig
+++ b/templates/booking/index.html.twig
@@ -6,7 +6,7 @@
 <div class="max-w-7xl mx-auto mt-10 p-6 bg-white shadow-md rounded-lg">
     <div class="flex justify-between items-center mb-6 helvetica-condensed">
         <h1 class="text-2xl font-bold">Current Bookings</h1>
-        <a href="{{ path('booking_new') }}" class="helvetica-condensed bg-[rgb(29,53,153)] text-white px-4 py-2 rounded-md hover:bg-[rgb(242,182,34)] transition">
+        <a href="{{ path('booking_new') }}" data-turbo="false" class="helvetica-condensed bg-[rgb(29,53,153)] text-white px-4 py-2 rounded-md hover:bg-[rgb(242,182,34)] transition">
             New Booking
         </a>
     </div>
@@ -98,7 +98,7 @@
                 {% for booking in bookings %}
                     <tr class="helvetica-condensed hover:bg-gray-50">
                         <td class="px-6 py-4 whitespace-nowrap font-medium">{{ booking.id }}</td>
-                        <td class="px-6 py-4 whitespace-nowrap">{{ booking.customer.name }}</td>
+                        <td class="px-6 py-4 whitespace-nowrap">{{ booking.user.name }}</td>
                         <td class="px-6 py-4 whitespace-nowrap">{{ booking.room.roomNumber }}</td>
                         <td class="px-6 py-4 whitespace-nowrap">{{ booking.checkInDate|date('Y-m-d') }}</td>
                         <td class="px-6 py-4 whitespace-nowrap">{{ booking.checkOutDate|date('Y-m-d') }}</td>
@@ -111,7 +111,7 @@
                             </span>
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap space-x-4 flex items-center">
-                            <a href="{{ path('booking_edit', {'id': booking.id}) }}" class="text-green-600 hover:text-green-900 hover:underline">Edit</a>
+                            <a href="{{ path('booking_edit', {'id': booking.id}) }}" data-turbo="false" class="text-green-600 hover:text-green-900 hover:underline">Edit</a>
 
                             <form action="{{ path('booking_checkin', {'id': booking.id}) }}" method="post" class="inline">
                                 <input type="hidden" name="_token" value="{{ csrf_token('checkin' ~ booking.id) }}">
@@ -143,7 +143,7 @@
                             {% if app.request.query.get('status') or app.request.query.get('customer') or app.request.query.get('search') or app.request.query.get('startDate') or app.request.query.get('endDate') %}
                                 No bookings found matching your filters.
                             {% else %}
-                                No bookings found. <a href="{{ path('booking_new') }}" class="text-blue-600 hover:underline">Create the first one</a>.
+                                No bookings found. <a href="{{ path('booking_new') }}" data-turbo="false" class="text-blue-600 hover:underline">Create the first one</a>.
                             {% endif %}
                         </td>
                     </tr>
