--- a/templates/booking/show.html.twig
+++ b/templates/booking/show.html.twig
@@ -77,11 +77,11 @@
                 <div class="space-y-3">
                     <div class="flex justify-between border-b pb-2 helvetica-condensed">
                         <span class="font-medium text-gray-600">Name:</span>
-                        <span class="font-medium">{{ booking.customer.name }}</span>
+                        <span class="font-medium">{{ booking.user.name }}</span>
                     </div>
                     <div class="flex justify-between border-b pb-2 helvetica-condensed">
                         <span class="font-medium text-gray-600">Account Number:</span>
-                        <span class="font-medium">{{ booking.customer.accountNumber }}</span>
+                        <span class="font-medium">{{ booking.user.accountNumber }}</span>
                     </div>
                 
             <div class="bg-gray-50 p-6 rounded-lg helvetica-condensed">
