--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -45,7 +45,6 @@
     </div>
 
 
-    {# EMAIL #}
     <div>
         {{ form_label(form.email, 'Email', {'label_attr': {'class':'block text-sm font-medium text-gray-700'}}) }}
         {{ form_widget(form.email, {
@@ -61,7 +60,7 @@
     </div>
 
 
-    {# PHONE #}
+  
     <div>
         {{ form_label(form.phone, 'Phone', {'label_attr': {'class':'block text-sm font-medium text-gray-700'}}) }}
         {{ form_widget(form.phone, {
@@ -77,7 +76,6 @@
     </div>
 
 
-    {# AGE #}
     <div>
         {{ form_label(form.age, 'Age', {'label_attr': {'class':'block text-sm font-medium text-gray-700'}}) }}
         {{ form_widget(form.age, {
@@ -93,7 +91,7 @@
     </div>
 
 
-    {# ROLES #}
+ {% if is_granted('ROLE_ADMIN') %}   
     <div>
         {{ form_label(form.roles, 'Roles', {'label_attr': {'class':'block text-sm font-medium text-gray-700'}}) }}
         {{ form_widget(form.roles, {
@@ -106,9 +104,8 @@
             <p class="text-sm text-red-600 mt-1">{{ error.message }}</p>
         {% endfor %}
     </div>
+{% endif %}
 
-
-    {# PASSWORD #}
     <div>
         {{ form_label(form.plainPassword, 'Password', {'label_attr': {'class':'block text-sm font-medium text-gray-700'}}) }}
         {{ form_widget(form.plainPassword, {
@@ -123,7 +120,7 @@
     </div>
 
 
-    {# SUBMIT BUTTON #}
+    
     <div>
         <button type="submit"
                 class="w-full bg-[rgb(29,53,153)] text-white py-2 px-4 rounded-md hover:bg-[rgb(242,182,34)] transition-colors">
@@ -132,7 +129,7 @@
     </div>
 
 
-    {{ form_end(form) }}
+    {{ form_end(form, { render_rest: false }) }}
 
 </div>
 {% endblock %}
