--- a/templates/booking/index.html.twig
+++ b/templates/booking/index.html.twig
@@ -131,7 +131,7 @@
     </a>
 
 
-                            <form action="{{ path('booking_delete', {'id': booking.id}) }}" method="post" class="inline">
+                            <form action="{{ path('booking_delete', {'id': booking.id}) }}" method="post" class="inline" onsubmit="return confirm('Are you sure you want to delete this booking?');">
                                 <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ booking.id) }}">
                                 <button type="submit" class="text-red-600 hover:text-red-900 hover:underline">Delete</button>
                             </form>
