--- a/templates/user/customer_index.html.twig
+++ b/templates/user/customer_index.html.twig
@@ -4,6 +4,17 @@
 
 {% block body %}
 <div class="max-w-7xl mx-auto mt-10 p-6 bg-white shadow-md rounded-lg">
+    {% for type, messages in app.session.flashbag.all() %}
+        {% for message in messages %}
+            <div class="mb-4 p-4 rounded-md helvetica-condensed
+                {% if type == 'success' %}bg-green-100 border border-green-400 text-green-700
+                {% elseif type == 'error' %}bg-red-100 border border-red-400 text-red-700
+                {% else %}bg-blue-100 border border-blue-400 text-blue-700{% endif %}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% do app.session.flashbag.clear() %}
     <div class="flex justify-between items-center mb-6 helvetica-condensed">
         <h1 class="text-2xl font-bold">Users</h1>
         <a href="{{ path('user_new') }}" class="helvetica-condensed bg-[rgb(29,53,153)] text-white px-4 py-2 rounded-md hover:bg-[rgb(242,182,34)] transition">
@@ -89,6 +100,10 @@
                                class="text-green-600 hover:text-green-900 hover:underline">
                                 Edit
                             </a>
+                            <form action="{{ path('user_delete', {'id': customer.id}) }}" method="post" class="inline" onsubmit="return confirm('Are you sure you want to delete this customer?');">
+                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ customer.id) }}">
+                                <button type="submit" class="text-red-600 hover:text-red-900 hover:underline">Delete</button>
+                            </form>
                         </td>
                     </tr>
                 {% else %}
